discussion/kv_engine/144139/144139_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

Merge mad-hatter into master

* commit '8c3189f72':
  MB-43205: Consumer enforces allowSanitizeValueInDeletion at DCP_PREPARE

Change-Id: I70974d372765d4ccd180e2c426da425500f6e754

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-01-26 12:04:38.000000000
Message: 
Uploaded patch set 3: New patch set was added with same tree, parents, and commit message as Patch Set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-01-26 12:06:15.000000000
Message: 
Patch Set 3:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33137/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33137/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28516/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28516/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7339/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8635/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8635/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8381/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8381/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16184/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16184/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8253/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8253/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6719/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/dcp_stream_test.h:189:19: error: no template named "optional" in namespace "boost"; did you mean "std::optional"? [clang-diagnostic-error]
            const boost::optional<cb::durability::Requirements>& durReqs);
                  ^~~~~~~~~~~~~~~
                  std::optional
/usr/bin/../lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/optional:453:11: note: "std::optional" declared here
    class optional
          ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6719/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/dcp_stream_test.h:189:19:
error: no template named "optional" in namespace "boost"; did you mean "std::optional"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6719/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/5255/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
